# AIGC_Detector

./: .env.example  .gitignore  DEPLOYMENT.md  DESIGN.md  DETECTOR_NOTES_2026-03.md  DEVPLAN.md  RELEASE_CHECKLIST.md  RUNBOOK.md  TECHNOLOGY_ARTICLE_ZH_REMOTE_PLAN.md  TECHNOLOGY_ARTICLE_ZH_SUMMARY.md  gen_ai_offline.py  gen_content.py  generate_ai_async.py  generate_ai_local.py  generate_ai_sync.py  init_openai.py  main.py  news_crawl.py  notes.md  pyproject.toml
configs/: models.yaml  prompts.yaml  training.yaml
models/mistral7b-gptq/: README.md  config.json
reports/: professional_zh_seed_baseline_v1.json  security_bp_hard_case_eval_v1.json  technology_article_zh_baseline_v1.json
scripts/: bootstrap_base_models.py  build_formal_zh_subset.py  build_security_bp_subset.py  build_technology_article_subset.py  download_cloud.py  download_models.py  eval_professional_zh_samples.py  eval_security_bp_hard_cases.py  eval_technology_article_zh.py  evaluate.py  finalize_from_cloud.py  generate_dataset.py  remote_cmd.py  run_generate.py  train_cloud.py  train_encoder.py  train_statistical.py  upload_cloud.py
src/aigc_detector/: __init__.py  config.py
src/aigc_detector/api/: main.py  middleware.py  routes.py  schemas.py
src/aigc_detector/data/: __init__.py  crawler.py  generator.py  mixer.py  processor.py  splitter.py
src/aigc_detector/detection/: encoder.py  (+5 more)
static/: index.html  style.css
test/: ai_detector.py  demo.py  demo1.py  generate_ai_local copy.py  perplexity_study.ipynb
tests/: test_api.py  test_data.py  test_detection.py  test_encoder.py  test_phase0.py
(+7 files in other folders)
