[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigc-detector"
version = "0.1.0"
description = "Bilingual (Chinese+English) AI-generated text detection system"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "slowapi>=0.1.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # ML Core
    "transformers>=4.40",
    "tokenizers>=0.19",
    "datasets>=2.18",
    "accelerate>=0.28",
    "peft>=0.10",
    "bitsandbytes>=0.43",
    "safetensors>=0.4",
    "sentencepiece>=0.2",

    # PyTorch (via CUDA index)
    "torch>=2.2",
    "torchvision>=0.17",

    # Data
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "nltk>=3.8",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "xgboost>=2.0",

    # Utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
